--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
                         rel="noopener noreferrer" class="text-decoration-none">
                         04/Maio - Questionário 10-07-02 -> Sem questões
                     </a>
+                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456425" target="_blank"
                         rel="noopener noreferrer" class="text-decoration-none">
                         04/Maio - Questionário 01-08-02 -> Sem questões
                     </a>
+                    <span class="badge bg-success">Atualizado</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456426" target="_blank"
