--- a/index.html
+++ b/index.html
@@ -75,17 +75,12 @@
                         rel="noopener noreferrer" class="text-decoration-none">
                         04/Maio - Questionário 02-08-02 -> Sem questões
                     </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456426" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        11/Maio - Questionário 03-08-02 -> Sem questões
-                    </a>
-                </li>
+                    <span class="badge bg-success">Atualizado</span>
+                </li>                
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456428" target="_blank"
                         rel="noopener noreferrer" class="text-decoration-none">
-                        11/Maio - Questionário 04-08-02 -> Sem questões
+                        11/Maio - Questionário 03/04-08-02 -> Sem questões
                     </a>
                 </li>
                 <li class="list-group-item">
