--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         rel="noopener noreferrer" class="text-decoration-none">
                         11/Maio - Questionário 03/04-08-02 -> Sem questões
                     </a>
+                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456430" target="_blank"
