--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         04/Maio - Questionário 10-07-02 -> Sem questões
                     </a>
                     <span class="badge bg-warning text-dark">Questionário Pendente</span>
+                    <span class="badge bg-danger ">Questionário Existe, porém de outro professor</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456425" target="_blank"
