--- a/index.html
+++ b/index.html
@@ -90,18 +90,21 @@
                         rel="noopener noreferrer" class="text-decoration-none">
                         11/Maio - Questionário 01-09-02 -> Sem questões
                     </a>
+                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456431" target="_blank"
                         rel="noopener noreferrer" class="text-decoration-none">
                         11/Maio - Questionário 02-09-02 -> Sem questões
                     </a>
+                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456432" target="_blank"
                         rel="noopener noreferrer" class="text-decoration-none">
                         11/Maio - Questionário 03-09-02 -> Sem questões
                     </a>
+                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456433" target="_blank"
