--- a/index.html
+++ b/index.html
@@ -105,60 +105,20 @@
                         11/Maio - Questionário 03-09-02 -> Sem questões
                     </a>
                     <span class="badge bg-warning text-dark">Questionário Pendente</span>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456433" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        18/Maio - Questionário 04-09-02 -> Sem questões
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456434" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        18/Maio - Questionário 05-09-02 -> Sem questões
-                    </a>
-                </li>
+                </li>                
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456435" target="_blank"
                         rel="noopener noreferrer" class="text-decoration-none">
-                        18/Maio - Questionário 06-09-02 -> Sem questões
+                        18/Maio - Questionário 04/05/06-09-02 -> Sem questões
                     </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456436" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        25/Maio - Questionário 07-09-02 -> Sem questões
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456437" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        25/Maio - Questionário 08-09-02 -> Sem questões
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456438" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        25/Maio - Questionário 09-09-02 -> Sem questões
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456439" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        01/Junho - Questionário 10-09-02 -> Sem questões
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456440" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
-                        01/Junho - Questionário 11-09-02 -> Sem questões
-                    </a>
-                </li>
+                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
+                </li>                
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456442" target="_blank"
                         rel="noopener noreferrer" class="text-decoration-none">
-                        01/Junho - Questionário 12-09-02 -> Sem questões
+                        01/Junho - Questionário 07/08/09/10/11/12-09-02 -> Sem questões
                     </a>
+                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
                 </li>
             </ul>
         </div>
