--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </li>
                 <li class="list-group-item">
                     Adição de questionários pendentes 
-                    <span class="badge bg-warning text-dark">Em andamento</span>
+                    <span class="badge bg-success">Completo</span>
                 </li>
             </ul>
            
