--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/page/view.php?id=388283" target="_blank"
-                        rel="noopener noreferrer"  class="text-decoration-none">
+                        rel="noopener noreferrer"  class="text-decoration-none text-secondary">
                         04/Maio - Vídeo Aula 10-07-02 -> Divergente/Não Encontrada
                     </a>
+                    <span class="badge bg-success ml-3"> Corrigido</span>
                 </li>
 
                 <li class="list-group-item">
