--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
 
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/page/view.php?id=388083" target="_blank"
-                        rel="noopener noreferrer"  class="text-decoration-none">
+                        rel="noopener noreferrer"  class="text-decoration-none text-secondary">
                         11/Maio - Vídeo Aula 02-09-02 -> Divergente/Não Encontrada
                     </a>
+                    <span class="badge bg-success ml-3"> Corrigido</span>
                 </li>
             </ul>
         </div>
