--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="list-group">               
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456420" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
+                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                         27/Abril - Questionário 05/06-07-02 -> Sem questões
                         
                     </a>
@@ -44,7 +44,7 @@
                 </li>               
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456422" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
+                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                         27/Abril - Questionário 07/08-07-02 -> Sem questões
                     </a>
                     <span class="badge bg-success">Atualizado</span>
@@ -66,14 +66,14 @@
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456425" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
+                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                         04/Maio - Questionário 01-08-02 -> Sem questões
                     </a>
                     <span class="badge bg-success">Atualizado</span>
                 </li>
                 <li class="list-group-item">
                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456426" target="_blank"
-                        rel="noopener noreferrer" class="text-decoration-none">
+                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                         04/Maio - Questionário 02-08-02 -> Sem questões
                     </a>
                     <span class="badge bg-success">Atualizado</span>
