--- a/index.html
+++ b/index.html
@@ -258,9 +258,10 @@
 
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388279" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         27/Abril - Cancer de Próstata 07/08-07-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388285" target="_blank"
