--- a/index.html
+++ b/index.html
@@ -265,9 +265,10 @@
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388285" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         04/Maio - Sarcopenia e Caquexia 10-07-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388073" target="_blank"
