--- a/index.html
+++ b/index.html
@@ -63,18 +63,17 @@
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456423" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         04/Maio - Questionário 09-07-02 -> Sem questões
                                     </a>
-                                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456424" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         04/Maio - Questionário 10-07-02 -> Sem questões
                                     </a>
-                                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
-                                    <span class="badge bg-danger ">Questionário Existe, porém de outro professor</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456425" target="_blank"
