--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                                         26/Janeiro - Exames Laboratoriais em Oncologia - quais, quando e como solicitar
                                         01-03-02 -> Verificar os artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=387891" target="_blank"
@@ -196,6 +197,7 @@
                                         26/Janeiro - Achados laboratoriais dos efeitos das terapias antineoplásicas
                                         02-03-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=387895" target="_blank"
@@ -204,6 +206,7 @@
                                         hemolíticas. Marcadores inflamatórios e de catabolismo energético
                                         03-03-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=387926" target="_blank"
@@ -211,6 +214,7 @@
                                         16/Fevereiro - Terapia nutricional na hormonioterapia
                                         04/05-04-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=387928" target="_blank"
@@ -218,6 +222,7 @@
                                         16/Fevereiro - Terapia nutricional na imunoterapia
                                         06-04-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388237" target="_blank"
@@ -225,6 +230,7 @@
                                         09/Março - Terapia nutricional na radioterapia
                                         12/13/14/1516-04-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388036" target="_blank"
@@ -232,6 +238,7 @@
                                         23/Março - Equipe multidisciplinar de terapia nutricional (EMTN)
                                         01-05-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388046" target="_blank"
@@ -239,6 +246,7 @@
                                         23/Março - Terapia nutricional enteral
                                         02-05-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388050" target="_blank"
@@ -246,6 +254,7 @@
                                         23/Março - Terapia nutricional parenteral
                                         03-05-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388246" target="_blank"
@@ -253,6 +262,7 @@
                                         30/Março - Ação do fisioterapeuta na sarcopenia
                                         06-05-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
 
                                 <li class="list-group-item">
@@ -289,30 +299,35 @@
                                         rel="noopener noreferrer" class="text-decoration-none">
                                         11/Maio - Nutrição no controle dos sintomas 03/04-08-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388082" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
                                         11/Maio - Microbioma e câncer 01-09-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388085" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
                                         11/Maio - Prebióticos 02-09-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388291" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
                                         11/Maio - Probióticos 03-09-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388294" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
                                         18/Maio - Nutrigenômica e nutrigenética 04/05/06-09-02 -> Sem Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388312" target="_blank"
@@ -320,6 +335,7 @@
                                         25/Maio E 01/Junho - Fitoterapia em oncologia 07/08/09/10/11/12-09-02 -> Sem
                                         Artigos
                                     </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
 
                             </ul>
@@ -354,6 +370,7 @@
                                         target="_blank" rel="noopener noreferrer" class="text-decoration-none">
                                         11/Maio - Atividade 05 -> Sem Material
                                     </a>
+                                    <span class="badge bg-warning text-dark">Em andamento</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/course/view.php?id=31220&section=0#section-147"
