--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                                         target="_blank" rel="noopener noreferrer"
                                         class="text-decoration-none text-secondary">
                                         27/Abril - Video Aula 06-07-02 -> Divergente
-                                    </a><span class="badge bg-success ml-3"> Corrigido</span>
+                                    </a><span class="badge bg-success ml-3"> Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/page/view.php?id=388283" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         04/Maio - Vídeo Aula 10-07-02 -> Divergente/Não Encontrada
                                     </a>
-                                    <span class="badge bg-success ml-3"> Corrigido</span>
+                                    <span class="badge bg-success ml-3"> Atualizado</span>
                                 </li>
 
                                 <li class="list-group-item">
@@ -166,7 +166,7 @@
                                         rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Vídeo Aula 02-09-02 -> Divergente/Não Encontrada
                                     </a>
-                                    <span class="badge bg-success ml-3"> Corrigido</span>
+                                    <span class="badge bg-success ml-3"> Atualizado</span>
                                 </li>
                             </ul>
                         </div>
