--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                     Adição de questionários pendentes
                     <span class="badge bg-success">Completo</span>
                 </li>
+                <li class="list-group-item">
+                    Verificação de Questionários pendentes com base na nova Pasta do Drive
+                    <span class="badge bg-warning">Em andamento</span>
+                </li>
             </ul>
 
 
