--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
                 <li class="list-group-item">
                     Verificação de Questionários pendentes com base na nova Pasta do Drive
-                    <span class="badge bg-warning">Em andamento</span>
+                    <span class="badge bg-warning text-dark">Em andamento</span>
                 </li>
             </ul>
 
