--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 </li>
                 <li class="list-group-item">
                     Verificação de Questionários pendentes com base na nova Pasta do Drive
+                    <span class="badge bg-success">Completo</span>
+                </li>
+                <li class="list-group-item">
+                    Verificação de Artigos pendentes com base na nova Pasta do Drive
                     <span class="badge bg-warning text-dark">Em andamento</span>
                 </li>
             </ul>
