--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </li>
                 <li class="list-group-item">
                     Verificação de Artigos pendentes com base na nova Pasta do Drive
-                    <span class="badge bg-warning text-dark">Em andamento</span>
+                    <span class="badge bg-success">Completo</span>
                 </li>
             </ul>
 
