--- a/index.html
+++ b/index.html
@@ -375,10 +375,10 @@
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/course/view.php?id=31220&section=0#section-137"
-                                        target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+                                        target="_blank" rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Atividade 05 -> Sem Material
                                     </a>
-                                    <span class="badge bg-warning text-dark">Em andamento</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/course/view.php?id=31220&section=0#section-147"
