--- a/index.html
+++ b/index.html
@@ -17,30 +17,7 @@
 
 <body>
     <section class="container mt-4">
-        <h1>Pendências Pós-Nutrição Turma 2020.1</h1>
-        <div class="mb-4">
-            <h6>Logs:</h6>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    Verificação e adição de todos os Artigos
-                    <span class="badge bg-success">Completo</span>
-                </li>
-                <li class="list-group-item">
-                    Adição de questionários pendentes
-                    <span class="badge bg-success">Completo</span>
-                </li>
-                <li class="list-group-item">
-                    Verificação de Questionários pendentes com base na nova Pasta do Drive
-                    <span class="badge bg-success">Completo</span>
-                </li>
-                <li class="list-group-item">
-                    Verificação de Artigos pendentes com base na nova Pasta do Drive
-                    <span class="badge bg-success">Completo</span>
-                </li>
-            </ul>
-
-
-        </div>
+        <h1 class="mb-3">Pendências Pós-Nutrição Turma 2020.1</h1>        
         <div class="mb-5">
 
             <div class="accordion" id="accordionExample">
@@ -398,6 +375,29 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="mb-4">
+            <h6>Logs:</h6>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    Verificação e adição de todos os Artigos
+                    <span class="badge bg-success">Completo</span>
+                </li>
+                <li class="list-group-item">
+                    Adição de questionários pendentes
+                    <span class="badge bg-success">Completo</span>
+                </li>
+                <li class="list-group-item">
+                    Verificação de Questionários pendentes com base na nova Pasta do Drive
+                    <span class="badge bg-success">Completo</span>
+                </li>
+                <li class="list-group-item">
+                    Verificação de Artigos pendentes com base na nova Pasta do Drive
+                    <span class="badge bg-success">Completo</span>
+                </li>
+            </ul>
+
+
         </div>
     </section>
 </body>
