--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <section class="container mt-4">
-        <h1 class="mb-3">Pendências Pós-Nutrição Turma 2020.1</h1>        
+        <h1 class="shadow p-3 mb-5 bg-body rounded">Pendências Pós-Nutrição Turma 2020.1</h1>        
         <div class="mb-5">
 
             <div class="accordion" id="accordionExample">
