--- a/index.html
+++ b/index.html
@@ -28,28 +28,34 @@
     </nav>
 
     <section class="content-cards">
-        <div class="card">
-            <div class="card-title">
-                <h5>Fisioterapia</h5>
+        <a href="">
+            <div class="card card-1">
+                <div class="card-title">
+                    <h5>Fisioterapia</h5>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-title">
-                <h5>Fármacia</h5>
+        </a>
+        <a href="">
+            <div class="card card-2">
+                <div class="card-title">
+                    <h5>Fármacia</h5>
+                </div>
             </div>
-        </div>
+        </a>
         <a href="nutricao2020-1.html">
-            <div class="card">
+            <div class="card card-3">
                 <div class="card-title">
                     <h5>Nutrição</h5>
                 </div>
             </div>
         </a>
-        <div class="card">
-            <div class="card-title">
-                <h5>Enfermagem</h5>
+        <a href="">
+            <div class="card card-4">
+                <div class="card-title">
+                    <h5>Enfermagem</h5>
+                </div>
             </div>
-        </div>
+        </a>
     </section>
 </body>
 
