--- a/nutricao2020-1.html
+++ b/nutricao2020-1.html
@@ -82,24 +82,24 @@
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456428" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Questionário 03/04-08-02 -> Sem questões
                                     </a>
                                     <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456430" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Questionário 01-09-02 -> Sem questões
                                     </a>
-                                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456430" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                    <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=480762" target="_blank"
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Questionário 02-09-02 -> Sem questões
                                     </a>
-                                    <span class="badge bg-warning text-dark">Questionário Pendente</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/quiz/view.php?id=456431" target="_blank"
