--- a/nutricao2020-1.html
+++ b/nutricao2020-1.html
@@ -302,35 +302,42 @@
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388082" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
-                                        11/Maio - Microbioma e câncer 01-09-02 -> Sem Artigos
+                                        11/Maio - Microbioma Geral 01-09-02 -> Sem Artigos
+                                    </a>
+                                    <span class="badge bg-warning text-dark">Pendente</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <a href="https://ead.puc-rio.br/mod/folder/view.php?id=480769" target="_blank"
+                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        11/Maio - Microbioma e câncer 02-09-02 -> Sem Artigos
                                     </a>
                                     <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388085" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
-                                        11/Maio - Prebióticos 02-09-02 -> Sem Artigos
+                                        11/Maio - Prebióticos 03-09-02 -> Sem Artigos
                                     </a>
                                     <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388291" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
-                                        11/Maio - Probióticos 03-09-02 -> Sem Artigos
+                                        11/Maio - Probióticos 04-09-02 -> Sem Artigos
                                     </a>
                                     <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388294" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
-                                        18/Maio - Nutrigenômica e nutrigenética 04/05/06-09-02 -> Sem Artigos
+                                        18/Maio - Nutrigenômica e nutrigenética 05/06/07-09-02 -> Sem Artigos
                                     </a>
                                     <span class="badge bg-warning text-dark">Pendente</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388312" target="_blank"
                                         rel="noopener noreferrer" class="text-decoration-none">
-                                        25/Maio E 01/Junho - Fitoterapia em oncologia 07/08/09/10/11/12-09-02 -> Sem
+                                        25/Maio E 01/Junho - Fitoterapia em oncologia 08/09/10/11/12/13-09-02 -> Sem
                                         Artigos
                                     </a>
                                     <span class="badge bg-warning text-dark">Pendente</span>
