--- a/nutricao2020-1.html
+++ b/nutricao2020-1.html
@@ -294,24 +294,24 @@
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388288" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Nutrição no controle dos sintomas 03/04-08-02 -> Sem Artigos
                                     </a>
-                                    <span class="badge bg-warning text-dark">Pendente</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388082" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Microbioma Geral 01-09-02 -> Sem Artigos
                                     </a>
-                                    <span class="badge bg-warning text-dark">Pendente</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=480769" target="_blank"
-                                        rel="noopener noreferrer" class="text-decoration-none">
+                                        rel="noopener noreferrer" class="text-decoration-none text-secondary">
                                         11/Maio - Microbioma e câncer 02-09-02 -> Sem Artigos
                                     </a>
-                                    <span class="badge bg-warning text-dark">Pendente</span>
+                                    <span class="badge bg-success">Atualizado</span>
                                 </li>
                                 <li class="list-group-item">
                                     <a href="https://ead.puc-rio.br/mod/folder/view.php?id=388085" target="_blank"
